--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,23 @@ dash-bootstrap-components==1.2.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
-en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.1.0/en_core_web_trf-3.1.0-py3-none-any.whl
 fonttools==4.33.3
 langcodes==3.3.0
-language-tool-python==2.7.1
 MarkupSafe==2.1.1
 pandas==1.4.3
 plotly==5.9.0
-spacy==3.4.0
-spacy-legacy==3.0.9
-spacy-loggers==1.0.3
-textacy==0.12.0
 urllib3==1.26.10
 webencodings==0.5.1
+
+# Libraries below are for doing the language processing text transformations,
+# so they are not needed for the web app Docker image. Other packages above may
+# by dependencies of the packages below, but it's probably fine. Mostly, I just
+# want to avoid unnecessarily downloading the big spaCy trf model. :)
+
+# en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
+# en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.1.0/en_core_web_trf-3.1.0-py3-none-any.whl
+# language-tool-python==2.7.1
+# spacy==3.4.0
+# spacy-legacy==3.0.9
+# spacy-loggers==1.0.3
+# textacy==0.12.0
